# Snotra

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  SPEC.md  package-lock.json  package.json  tauri_todo.md  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/skills/implement/: SKILL.md
.claude/skills/tdd/: SKILL.md
.github/: codex-automation.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: codex-implementation.yml
.github/scripts/: extract-latest-codex-spec.mjs  prepare-codex-prompt.mjs  render-pr-body.mjs  render-spec-qa-comment.mjs  run-codex-command.mjs  select-base-branch.mjs  spec-qa.mjs
.github/workflows/: ci.yml  codex-issue-implement.yml  label-sync.yml  release.yml
scripts/: run-codex.sh
snotra-core/: CLAUDE.md  Cargo.toml
snotra-core/src/: config.rs  folder.rs  history.rs  indexer.rs  lib.rs  query.rs  search.rs  ui_types.rs  window_data.rs
src/: app.rs  binfmt.rs  config.rs  folder.rs  history.rs  hotkey.rs  icon.rs  ime.rs  indexer.rs  launcher.rs  main.rs  platform_win32.rs  search.rs  settings.rs  tray.rs  ui_types.rs  window.rs  window_data.rs
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkey.rs  icon.rs  indexing.rs  main.rs  platform.rs  state.rs
ui/: CLAUDE.md  index.html
ui/src/: App.tsx
ui/src/components/: ResultRow.tsx  ResultsWindow.tsx  SearchWindow.tsx  SettingRow.tsx  SettingsGeneral.tsx  SettingsIndex.tsx  SettingsSearch.tsx  SettingsVisual.tsx  SettingsWindow.tsx  ThemePreview.tsx  ToggleSwitch.tsx
ui/src/lib/: commands.ts  invoke.ts  perf.ts  theme.ts  truncatePath.ts  types.ts
ui/src/stores/: search.ts  settings.ts
ui/src/styles/: global.css  settings.css
