[package]
name = "snotra"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
fuzzy-matcher = "0.3"
dirs = "5"

[profile.release]
opt-level = "s"
lto = true
strip = true
