[package]
name = "snotra-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
toml = "0.8"
fuzzy-matcher = "0.3"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Storage_FileSystem",
] }
